<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="225dp"
    android:background="@color/secondary_theme">

    <TextView
        android:id="@+id/tvChooserName"
        style="@style/TextAppearance.AppCompat.White"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/choosers_name"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvDate"
        style="@style/TextAppearance.AppCompat.White"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ivDateHint"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/tvChoice"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvChooserName" />

    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_percent="0.5"
        android:id="@+id/guideline"
        android:orientation="vertical"/>

    <TextView
        android:id="@+id/tvChoice"
        style="@style/TextAppearance.AppCompat.White"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choice"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/ivChoiceMade"
        app:layout_constraintEnd_toEndOf="@+id/ivChoiceMade"
        app:layout_constraintStart_toStartOf="@+id/ivChoiceMade" />

    <ImageView
        android:id="@+id/ivChoiceMade"
        style="@style/TextAppearance.AppCompat.Base"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:background="@drawable/loonie_head"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvChooserName"
        app:layout_constraintVertical_bias="0.7"
        android:contentDescription="@string/ivChoiceMadeDesc" />

    <TextView
        android:id="@+id/tvResult"
        style="@style/TextAppearance.AppCompat.White"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/result"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/ivResult"
        app:layout_constraintEnd_toEndOf="@+id/ivResult"
        app:layout_constraintStart_toStartOf="@+id/ivResult" />

    <ImageView
        android:id="@+id/ivResult"
        style="@style/TextAppearance.AppCompat.Base"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:background="@drawable/loonie_tail"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/ivChoiceMade"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/tvChoice"
        android:contentDescription="@string/ivResultDesc" />

    <ImageView
        android:id="@+id/ivWonFlip"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:contentDescription="@string/ivWonFlipDesc"
        android:background="@drawable/ic_baseline_close_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/ivResult"
        app:layout_constraintStart_toEndOf="@+id/ivChoiceMade"
        app:layout_constraintTop_toTopOf="@+id/tvChoice"
        />


</androidx.constraintlayout.widget.ConstraintLayout>