<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:elevation="2dp"
    tools:context=".application.task.NewTaskActivity"
    android:background="@color/primary_theme">

    <Button
        android:id="@+id/btnTaskHistory"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:background="@drawable/ic_baseline_keyboard_arrow_up_24"
        android:backgroundTint="@color/white"
        android:translationZ="6dp"
        android:elevation="6dp"
        android:scaleX="2"
        android:scaleY="2"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
    <TextView
        android:id="@+id/tvTurn"
        style="@style/TextAppearance.AppCompat.White"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/turn"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/txtTaskDescription"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.25" />

    <ImageView
        android:id="@+id/ivChildrenPicture"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:src="@drawable/default_child_image"
        app:layout_constraintEnd_toEndOf="@+id/tvTurn"
        android:padding="10dp"
        app:layout_constraintStart_toStartOf="@+id/tvTurn"
        app:layout_constraintTop_toBottomOf="@+id/tvTurn"
        android:contentDescription="@string/picture_of_child" />

    <TextView
        android:id="@+id/tvChildrenName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/TextAppearance.AppCompat.White"
        android:textSize="25sp"
        android:text="@string/child_name"
        app:layout_constraintEnd_toEndOf="@+id/ivChildrenPicture"
        app:layout_constraintStart_toStartOf="@+id/ivChildrenPicture"
        app:layout_constraintTop_toBottomOf="@+id/ivChildrenPicture" />

    <EditText
        android:id="@+id/txtTaskDescription"
        style="@style/TextAppearance.AppCompat.White"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:autofillHints="@string/task_description"
        android:backgroundTint="@color/primary_theme_darker"
        android:ems="10"
        android:hint="@string/task_description"
        android:inputType="textPersonName"
        android:text="@string/task_description"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/tvChildrenName"
        app:layout_constraintStart_toStartOf="@+id/tvChildrenName"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        style="@style/TextAppearance.AppCompat.White"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:text="@string/task"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/txtTaskDescription"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnCompletedTask"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingVertical="15dp"
        android:paddingHorizontal="40dp"
        android:backgroundTint="@color/white"
        android:text="@string/complete_task"
        android:textColor="@color/primary_theme"
        app:layout_constraintBottom_toBottomOf="parent"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTaskDescription"
        app:layout_constraintVertical_bias="0.26" />

    <Button
        android:id="@+id/btnDeleteTask"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:layout_margin="10dp"
        android:text="@string/delete"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnCompletedTask" />

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/fragmentHistory"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="20dp"
        android:elevation="3dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>